# impactchartdemo

./: .gitignore  Housing Value.ipynb  Impact Chart Demo.ipynb  Makefile  README.md  Synthetic Data.ipynb  pyproject.toml  requirements.txt
dataspecs/: la-cbsa.yaml  rva-cbsa.yaml
impactchartdemo/: data.py
impactchartdemo/dataset/: homeowners.py  synth1.py
