[tool.poetry]
name = "impactchartdemo"
version = "0.1.2"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
censusdis = "^1.0.1"
impactchart = "^0.3.3"
jupyterlab = "^4.0.12"
ipywidgets = "^8.1.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.14"
flake8 = "^7.0.0"
black = {extras = ["jupyter"], version="^24.1.0"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
